--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "body-parser": "^1.16.0",
-    "cors": "^2.8.1",
-    "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "express-jwt": "^5.1.0",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.8.1",
-    "mongoose-findorcreate": "^1.0.0",
     "morgan": "^1.8.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1"
